--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "docxToJats"]
-	path = docxToJats
-	url = https://github.com/Vitaliy-1/docxToJats
+[submodule "docxToTEI"]
+	path = docxToTEI
+	url = https://github.com/Vitaliy-1/docxToTEI
